# arona

./: .drone.yml  .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: students.json
src/: general.rs  image.rs  lib.rs  main.rs  recruitment.rs
