[package]
name = "arona"
version = "0.1.0"
authors = ["Rekai Musuka <rekai@musuka.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluearch-recruitment = { git = "https://github.com/Paoda/bluearch-recruitment.git", branch = "main" }
dotenv = "^0.15"
env_logger = "^0.8"
lazy_static = "^1.4"
log = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serenity = "^0.10"
tokio = { version = "^1.0", features = ["macros", "rt-multi-thread"] }
image = "^0.23"
reqwest = "^0.11"
